--- a/local.yml
+++ b/local.yml
@@ -18,3 +18,23 @@
       dest: /home/mentat/.zshrc
       owner: mentat
       group: mentat
+
+   - name: add ansible user
+     user:
+       name: velociraptor
+       system: yes
+
+   -name: set up sudo for ansible user
+    copy:
+      src: files/sudoer_velociraptor
+      dest: /etc/sudoers.d/velociraptor
+      owner: root
+      group: root
+      mode: 0440
+
+   -name: add ansible-pull cron job
+    cron:
+      name: ansible auto-provision
+      user: velociraptor
+      minute: "*/10"
+      job: ansible-pull -o -U https://github.com/williamseipp/ansible_desktop.git
